# Tencor

./: .gitignore  CMakeLists.txt  README.md  Tencor++.sln
Tencor++/: Dense.h  Hash.h  Layer.h  List.h  Loss.h  MNISTDataLoader.h  Model.h  ModelSaver.h  Sequential.h  Tencor++.cpp  Tencor++.vcxproj  Tencor++.vcxproj.filters  Tencor.h  Tensor.h  mnist_digits.cpp  stack.h
